@startuml

class Position{
- x: int
- y: int
+ Position(int, int)
+ getX(): int
+ getY(): int
+ setX(int)
+ setY(int)
}

Position <|-- Monstre

class Monstre #FFB6C1{
+ Monstre(int, int)

}

Position <|-- Perso

class Perso{
+ Perso(int, int)
+ etrePresent (int, int)
}

Monstre "*" <-- "1" Labyrinthe : -monstre
Perso "1" <-- "1" Labyrinthe : - pj

class Labyrinthe #FFB6C1{
- murs: boolean[][]
+ getSuivant(int, int, String)
+ Labyrinthe(String)
+ ajoutMonstreLaby()
+ getMonstre()
+ deplacerPerso(String)
+ etreFini(): boolean
+ getLengthY(): int
+ getLength(): int
+ getMur(int x, int y): boolean
+ getPerso(): Perso
}

Labyrinthe "1" <--* "1" LabyJeu : - Laby

class LabyJeu{
+ LabyJeu(Labyrinthe)
+ update(double, Clavier)
+ etreFini(): boolean
+ init()
}

LabyJeu <.. Main

class Main{
- main()
- main(String[])
}

Labyrinthe <.. Main
LabyDessin <.. Main

class LabyDessin{
- LabyDessin()
- dessinerJeu(Jeu, Canvas)
}

hide Main
hide LabyDessin
hide LabyJeu


@enduml